Make hours-per-day configurable

--- a/app/options.html
+++ b/app/options.html
@@ -16,6 +16,11 @@
       <input type="text" id="username"></input><br><br>
     </div>
 
+    <div id="hpdWrapper">
+      <div>Hours per day: </div>
+      <input type="text" id="hoursPerDay"></input><br><br>
+    </div>
+
     <button id="save">Save</button>
     <div id="saved"></div>
 
