Change date format

--- a/app/options.html
+++ b/app/options.html
@@ -40,7 +40,8 @@
         </div>
         <input type="checkbox" id="useStartDate" onchange="showhideStartDate()"><br />
         <div id="startDateShowHideWrapper" style="display:none">
-            <input type="text" id="startDate"></input><br>
+            <span>Format: yyyy-MM-dd, e.g. 2012-12-31</span><br />
+            <input type="text" id="startDate"></input><br />
         </div>
         <br>
     </div>
