Changed input type to date for selecting date for starting on.

--- a/app/options.html
+++ b/app/options.html
@@ -32,7 +32,7 @@
         <input type="checkbox" id="useStartDate"><br />
         <div id="startDateShowHideWrapper" style="display:none">
             <span>Format: yyyy-MM-dd, e.g. 2012-12-31</span><br />
-            <input type="text" id="startDate"></input><br />
+            <input type="date" id="startDate"></input><br />
         </div>
         <br>
     </div>
