--- a/app/popup.html
+++ b/app/popup.html
@@ -1,13 +1,18 @@
 <!doctype html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <!-- build:css styles/main.css -->
     <link href="styles/main.css" rel="stylesheet">
     <!-- endbuild -->
-  </head>
-  <body>
-    <span id="flextime">Not Fetched Yet</span>
-    <script src="scripts/popup.js"></script>
-  </body>
+</head>
+
+<body>
+    <div class="popup">
+        <span id="flextime">Not Fetched Yet</span>
+        <script src="scripts/popup.js"></script>
+    </div>
+</body>
+
 </html>
