Added settings button for ease of use and style improvements

--- a/app/popup.html
+++ b/app/popup.html
@@ -10,6 +10,12 @@
 
 <body>
     <div class="popup">
+        <div class="popupTitleBanner">
+            <img src="images/man-flexing-legs_128.png" class="logo" width="18px" height="18px"/>
+            <h2 class="title">Tempoflex</h2>
+            <img src="images/settings.png" class="settings" id="settings" width="24px" height="24px"/>
+        </div>
+        
         <span id="flextime">Not Fetched Yet</span>
         <script src="scripts/popup.js"></script>
     </div>
