--- a/app/popup.html
+++ b/app/popup.html
@@ -13,10 +13,10 @@
         <div class="popupTitleBanner">
             <img src="images/man-flexing-legs_128.png" class="logo" width="18px" height="18px"/>
             <h2 class="title">Tempoflex</h2>
-            <img src="images/settings.png" class="settings" id="settings" width="24px" height="24px"/>
+            <img src="images/settings.png" class="settings" id="settings" width="18px" height="18px"/>
         </div>
-        
-        <span id="flextime">Not Fetched Yet</span>
+
+        <span id="flextime">Fetching data from Tempo</span>
         <script src="scripts/popup.js"></script>
     </div>
 </body>
