--- a/app/popup.html
+++ b/app/popup.html
@@ -3,9 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <!-- build:css styles/main.css -->
-    <link href="styles/main.css" rel="stylesheet">
-    <!-- endbuild -->
+    <!--<link href="styles/main.css" rel="stylesheet">-->
 </head>
 
 <body>
@@ -17,7 +15,6 @@
         </div>
 
         <span id="flextime">Fetching data from Tempo</span>
-        <script src="scripts/popup.js"></script>
     </div>
 </body>
 
