Fix naming of option in UI
Some uses of developerModeEnabled vs some of developerMode. Favoured the more explicit.

--- a/app/options.html
+++ b/app/options.html
@@ -37,7 +37,7 @@
 
         <div id="developerModeWrapper" style="display:none">
             <div>Enable Developer Mode: </div>
-            <input type="checkbox" id="developerMode"/><br><br>
+            <input type="checkbox" id="developerModeEnabled"/><br><br>
             <input type="hidden" id="developerSettingsVisible" value="false"/>
         </div>
 
