Make version visible by default, and move to bottom

--- a/app/options.html
+++ b/app/options.html
@@ -41,12 +41,12 @@
             <input type="hidden" id="developerSettingsVisible" value="false"/>
         </div>
 
-        <div id="versionWrapper" style="display:none">
-            <div id="version"></div>
-        </div>
-
         <button id="save">Save</button>
         <div id="saved"></div>
+
+        <div id="versionWrapper">
+            <br/><div id="version"></div>
+        </div>
     </div>
 
     <script src="scripts/options.js"></script>
