Make saving options not resize the UI

--- a/app/options.html
+++ b/app/options.html
@@ -42,7 +42,7 @@
         </div>
 
         <button id="save">Save</button>
-        <div id="saved"></div>
+        <div id="saved">&nbsp;</div>
 
         <div id="versionWrapper">
             <br/><div id="version"></div>
