--- a/app/options.html
+++ b/app/options.html
@@ -5,6 +5,7 @@
     <!-- build:css styles/main.css -->
     <link href="styles/main.css" rel="stylesheet">
     <!-- endbuild -->
+    <meta charset="utf-8"/>
 </head>
 
 <body>
